--- a/src/main/resources/assets/minewell/lang/en_us.lang
+++ b/src/main/resources/assets/minewell/lang/en_us.lang
@@ -3,6 +3,7 @@ itemGroup.minewell=Minewell
 
 # Blocks
 tile.minewell.end_well.name=End Well Core
+tile.minewell.end_reward_chest.name=Reward Chest
 
 # Items
 item.minewell.light_charge.tier_one.name=Charge of Light - Tier I
